Tests/Should_fail/encode_4.int
let f = fn x -> if True then encode{'a} x else encode{'a*'a} (x,x)
let g  =
   val c = f 3 in
   val d = intadd(c, 1) in
   return d
